--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,7 +8,7 @@ name: Publish Docker image
 on:
   push:
     tags:
-      - '*.*.*'
+      - 'v1.*.*'
 
 jobs:
   push_to_registry:
@@ -30,7 +30,7 @@ jobs:
         with:
           images: debst/an-image
           tags: |
-            type=semver,pattern={{version}}
+            type=semver,pattern={{raw}}
       
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
